--- a/public/css/layout/navbar.css
+++ b/public/css/layout/navbar.css
@@ -1,10 +1,10 @@
 
 .navbar {
-  width: 100vw;
+  width: 100%;
   height: 90px;
   position: sticky;
   top: 0;
-  background-color: transparent;
+  background-color: #fff;
   overflow: hidden;
   z-index: 10;
   border-bottom: 1px solid #00000010;
@@ -23,14 +23,15 @@
 .navbar .navbar__container > div {
   height: 100%;
   width: 100%;
-  flex: 1 1 50%;
+  flex: 1 1 20%;
   display: flex;
   align-items: center;
 }
 
 .navbar .navbar__container .navbar__container__left {
   justify-content: flex-start;
-  flex-basis: 10%;
+  flex-basis: 15%;
+  flex-grow: 1;
 }
 
 .navbar .navbar__container .navbar__container__left .logo {
@@ -39,15 +40,18 @@
 }
 
 .navbar .navbar__container .navbar__container__center {
-  flex-basis: 80%;
+  /* flex-basis: 100%; */
+  flex-grow: 3;
   justify-content: center;
 }
 
-.navbar .navbar__container .navbar__container__right {
-  flex-basis: 10%;
-  justify-content: flex-end;
-  gap: 1rem;
+.navbar__container__center .wrapper {
+  width: 100%;
 }
 
-.navbar .navbar__container .navbar__container__right .link {
+.navbar .navbar__container .navbar__container__right {
+  flex-basis: 15%;
+  flex-grow: 1;
+  justify-content: flex-end;
+  gap: 1rem;
 }
