--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -1,7 +1,10 @@
 /* @import url('./normalize.css'); */
 @import url('https://fonts.googleapis.com/css2?family=Inconsolata:wght@200;300;400;500;600;700;800;900&family=Josefin+Sans:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;1,100;1,200;1,300;1,400;1,500;1,600;1,700&family=Jura:wght@300;400;500;600;700&family=Montserrat:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&family=Sora:wght@100;200;300;400;500;600;700;800&family=Source+Sans+Pro:ital,wght@0,200;0,300;0,400;0,600;0,700;0,900;1,200;1,300;1,400;1,600;1,700;1,900&family=Ubuntu+Mono:ital,wght@0,400;0,700;1,400;1,700&family=Ubuntu:ital,wght@0,300;0,400;0,500;0,700;1,300;1,400;1,500;1,700&display=swap');
-@import url('./layout/navbar.css');
+@import url('https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.0/css/all.min.css');
+@import url('./index.css');
 @import url('./signin.css');
+@import url('./signup.css');
+@import url('./layout/navbar.css');
 
 * {
   margin: 0;
@@ -11,7 +14,10 @@
 }
 
 :root {
-
+  --primary-color: #D49D2F;
+  --secondary-color: #E3CE64;
+  --dark-color: #00000090;
+  --dark-alt-color: #00000010;
 }
 
 body {
@@ -30,24 +36,79 @@ body {
   cursor: pointer;
 }
 
+.btn-full {
+  width: 100%;
+}
+
 .btn-primary {
   padding: .75rem 1rem;
   border-radius: 10px;
-  background-color: #f1b301;
+  gap: .5rem;
+  background-color: var(--primary-color);
   text-decoration: none;
   color: white;
   font-family: 'Poppins', sans-serif;
 }
 
 .btn-primary:hover {
-  background-color: #f1b30190;
+  background-color: var(--secondary-color);
+}
+
+.btn-icon {
+  height: 50px;
+  width: 50px;
+  border-radius: 12px;
+  color: white;
+  background-color: var(--primary-color);
+  font-size: 1.5rem;
+  text-decoration: none;
+}
+
+.btn-icon .icon {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+}
+
+.btn-icon:hover {
+  cursor: pointer;
+  background-color: var(--secondary-color);
 }
 
 .link {
   text-decoration: none;
-  color: #00000090;
+  color: var(--primary-color);
 }
 
 .link:hover {
-  color: #00000010;
+  color: var(--secondary-color);
+}
+
+.pix-input {
+  display: block;
+  width: 100%;
+  position: relative;
+  box-sizing: border-box;
+  border: 1px solid var(--dark-alt-color);
+  border-radius: 10px;
+  background-color: var(--dark-alt-color);
+  padding: 1rem .85rem;
+}
+
+.pix-input::placeholder {
+  opacity: 0.5;
+}
+
+.pix-input:focus {
+  outline: none;
+}
+
+.pix-input-group {
+  width: 100%;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  padding: .75rem .5rem 1.5rem .5rem;
 }
