--- a/public/css/index.css
+++ b/public/css/index.css
@@ -90,6 +90,12 @@
   justify-content: space-between;
 }
 
+.products__container .heading .options {
+  display: flex;
+  align-items: center;
+  gap: 1rem;
+}
+
 .products__container .body {
   width: 100%;
   height: 100%;
@@ -139,9 +145,9 @@
   margin-left: auto;
   margin-right: auto;
   /* transform: translate(50%, -50%); */
-  height: auto;
-  width: 50%;
-  min-width: 130px;
+  height: 200px;
+  width: 200px;
+  /* min-width: 130px; */
   object-fit: contain;
   background-color: #fff;
   border: 2.5px solid var(--dark-color);
@@ -170,7 +176,7 @@
   font-weight: 300;
 }
 
-.wrapper .product-card .content .btn {
+.wrapper .product-card .content form {
   margin-top: auto;
 }
 
