--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -4,6 +4,8 @@
 @import url('./index.css');
 @import url('./signin.css');
 @import url('./signup.css');
+@import url('./admin.css');
+@import url('./favorite.css');
 @import url('./layout/navbar.css');
 
 * {
@@ -25,6 +27,7 @@ body {
 }
 
 .btn {
+  font-family: 'Poppins', sans-serif;
   position: relative;
   display: inline-flex;
   justify-content: center;
@@ -34,6 +37,11 @@ body {
   border-radius: 0;
   background-color: transparent;
   cursor: pointer;
+  padding: .75rem 1rem;
+  border-radius: 10px;
+  gap: .5rem;
+  text-decoration: none;
+  color: white;
 }
 
 .btn-full {
@@ -41,13 +49,7 @@ body {
 }
 
 .btn-primary {
-  padding: .75rem 1rem;
-  border-radius: 10px;
-  gap: .5rem;
   background-color: var(--primary-color);
-  text-decoration: none;
-  color: white;
-  font-family: 'Poppins', sans-serif;
 }
 
 .btn-primary:hover {
@@ -111,4 +113,20 @@ body {
   justify-content: center;
   align-items: center;
   padding: .75rem .5rem 1.5rem .5rem;
+}
+
+.pix-badge {
+  position: absolute;
+  top: -5px;
+  right: -8px;
+  background-color: black;
+  color: white;
+  border-radius: 50%;
+  height: 20px;
+  width: 20px;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  font-size: 14px;
 }
